--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   firebase_database: ^10.2.2
   fluttertoast: ^8.2.2
   google_maps_flutter: ^2.3.0
+  geolocator: ^9.0.2
+  http: ^0.13.4
+  provider: ^6.0.5
+  flutter_polyline_points: ^1.0.0
+  flutter_geofire: ^2.0.3
 
 dev_dependencies:
   flutter_test:
