--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_geofire: ^2.0.3
   firebase_messaging: ^14.6.4
   assets_audio_player: ^3.0.6
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
